--- a/force-app/main/default/lwc/fileUploaderChild/fileUploaderChild.html
+++ b/force-app/main/default/lwc/fileUploaderChild/fileUploaderChild.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card>
-        <lightning-file-upload label="Upload File" name="fileUploader" onuploadfinished={handleUploadFinished}></lightning-file-upload>
+        <lightning-file-upload label="Upload File" name="fileUploader" accept={acceptedformats} record-id={recordId} onuploadfinished={handleUploadFinished}></lightning-file-upload>
     </lightning-card>
 </template>
