--- a/force-app/main/default/lwc/fileUploaderChild/fileUploaderChild.html
+++ b/force-app/main/default/lwc/fileUploaderChild/fileUploaderChild.html
@@ -1,5 +1,7 @@
 <template>
-    <lightning-card>
-        <lightning-file-upload label="Upload File" name="fileUploader" accept={acceptedformats} record-id={recordId} onuploadfinished={handleUploadFinished}></lightning-file-upload>
-    </lightning-card>
+    <div class="slds-form-element">
+        <lightning-input type="file" label="Upload PDF File" onchange={handleFileUpload}>
+        </lightning-input>
+    </div>
+    <h1>{fileName}</h1>
 </template>
