--- a/force-app/main/default/lwc/fileUploaderChild/fileUploaderChild.html
+++ b/force-app/main/default/lwc/fileUploaderChild/fileUploaderChild.html
@@ -1,6 +1,6 @@
 <template>
     <div class="slds-form-element">
-        <lightning-input type="file" label="Upload PDF File" onchange={handleFileUpload}>
+        <lightning-input type="file" label="Upload PDF File" onchange={handleFileUpload} multiple>
         </lightning-input>
     </div>
     <h1>{fileName}</h1>
