--- a/force-app/main/default/lwc/fileUploaderParent/fileUploaderParent.html
+++ b/force-app/main/default/lwc/fileUploaderParent/fileUploaderParent.html
@@ -1,6 +1,7 @@
 <template>
-    <c-file-Uploader-Child file-url={fileUrl} onfileselected={handleFileSelected}></c-file-Uploader-Child>
+    <h1 style="text-align:center ;font-size:larger;font-weight:bolder;background-color:White">LWC</h1>
+    <c-file-Uploader-Child  onfileselected={handleFileSelected}></c-file-Uploader-Child>
     <div class="slds-form-element">
-        <img if:true={fileUrl} src={fileUrl} />
+        <img if:true={fileUrl} style="border:5px solid Black" src={fileUrl} />
     </div>    
 </template>
