--- a/force-app/main/default/lwc/fileUploaderParent2/fileUploaderParent2.html
+++ b/force-app/main/default/lwc/fileUploaderParent2/fileUploaderParent2.html
@@ -1,13 +1,11 @@
 <template>
-    <lightning-card title="File Uploader">
-        <lightning-file-upload
-            label="Upload Image"
-            accept=".jpg, .jpeg, .png"
-            onuploadfinished={handleUploadFinished}>
-        </lightning-file-upload>
-
-        <template if:true={previewImage}>
-            <c-file-Uploader-Child image-url={previewImage}></c-file-Uploader-Child>
+    <h1 style="text-align:center;font-size:larger;font-weight:bolder;background-color:White">LWC</h1>
+    <c-file-uploader-child-2 onfileselected={handleFileSelected}></c-file-uploader-child-2>
+    <template if:true={fileUrls}>
+        <template for:each={fileUrls} for:item="fileUrl">
+            <div key={fileUrl} class="slds-form-element">
+                <img style="border:5px solid Black" src={fileUrl} />
+            </div>
         </template>
-    </lightning-card>
+    </template>
 </template>
