--- a/force-app/main/default/lwc/contactCreationLWC/contactCreationLWC.html
+++ b/force-app/main/default/lwc/contactCreationLWC/contactCreationLWC.html
@@ -1,6 +1,9 @@
 <template>
+    <div style="border: 5px solid BLack;">
+    <div style="text-align: center; font-weight:bolder;background-color:white">LWC (Task 1) ContactCreation</div>    
     <lightning-card title="Record with Field Integrity" icon-name="standard:account">
             <lightning-record-form object-api-name={objectApiName} fields={fields} mode="edit" onsubmit={handleSubmit}></lightning-record-form>
-        </lightning-card>
+    </lightning-card>
+    </div>
 </template>
 
