--- a/force-app/main/default/lwc/fileUploaderPagination/fileUploaderPagination.html
+++ b/force-app/main/default/lwc/fileUploaderPagination/fileUploaderPagination.html
@@ -32,7 +32,7 @@
 <template>
     <div style="border: 5px solid BLack;">
     <div class="slds-form-element">
-        <h1>fileUploaderPagination</h1>
+        <div style="text-align: center; font-weight:bolder;background-color:white">LWC (Task 3) Pagination</div>
         <lightning-input type="file" label="Upload PDF File" onchange={handleFileUpload} multiple>
         </lightning-input>
     </div>
