--- a/force-app/main/default/lwc/objectSearch/objectSearch.html
+++ b/force-app/main/default/lwc/objectSearch/objectSearch.html
@@ -28,29 +28,32 @@
 
 
 <template>
-    <lightning-card title="Search Objects">
-        <div class="slds-p-around_medium">
-            <lightning-layout>
-                <lightning-layout-item size="6" padding="around-small">
-                    <lightning-input type="search" label="Search" value={searchTerm} onchange={handleSearchTermChange}></lightning-input>
-                </lightning-layout-item>
-                <lightning-layout-item size="6" padding="around-small">
-                    <lightning-dual-listbox label="Select Objects" source-label="Available" selected-label="Selected" options={objectOptions} value={selectedObjects} onchange={handleObjectSelection}></lightning-dual-listbox>
-                </lightning-layout-item>
-            </lightning-layout>
-            <lightning-button variant="brand" label="Search" onclick={handleSearch}></lightning-button>
-        </div>
-        <template if:true={searchResults}>
+    <div style="border: 5px solid BLack;">
+        <div style="text-align: center; font-weight:bolder;background-color:white">LWC (Task 6) SearchObject</div>    
+        <lightning-card title="Search Objects">
             <div class="slds-p-around_medium">
-                <template for:each={searchResults} for:item="result">
-                    <lightning-card key={result.Id} title={result.Name}>
-                        <div class="slds-p-horizontal_small">
-                            <p>Object: {result.attributes.type}</p> 
-                            <p>Record ID: {result.Id}</p>
-                        </div>
-                    </lightning-card>
-                </template>
+                <lightning-layout>
+                    <lightning-layout-item size="6" padding="around-small">
+                        <lightning-input type="search" label="Search" value={searchTerm} onchange={handleSearchTermChange}></lightning-input>
+                    </lightning-layout-item>
+                    <lightning-layout-item size="6" padding="around-small">
+                        <lightning-dual-listbox label="Select Objects" source-label="Available" selected-label="Selected" options={objectOptions} value={selectedObjects} onchange={handleObjectSelection}></lightning-dual-listbox>
+                    </lightning-layout-item>
+                </lightning-layout>
+                <lightning-button variant="brand" label="Search" onclick={handleSearch}></lightning-button>
             </div>
-        </template>
-    </lightning-card>
+            <template if:true={searchResults}>
+                <div class="slds-p-around_medium">
+                    <template for:each={searchResults} for:item="result">
+                        <lightning-card key={result.Id} title={result.Name}>
+                            <div class="slds-p-horizontal_small">
+                                <p>Object: {result.attributes.type}</p> 
+                                <p>Record ID: {result.Id}</p>
+                            </div>
+                        </lightning-card>
+                    </template>
+                </div>
+            </template>
+        </lightning-card>
+    </div>
 </template>
