--- a/force-app/main/default/lwc/lwcWizard/lwcWizard.html
+++ b/force-app/main/default/lwc/lwcWizard/lwcWizard.html
@@ -17,7 +17,7 @@
         </lightning-button-group>
     </template> 
 
-    <template if:true={twoVisibile}> 
+    <template if:true={twoVisible}> 
         <textarea name="emailBody" onchange={handleEmailDraft}></textarea>
         <lightning-button-group>
             <lightning-button label="Previous" onclick={handlePrevious}></lightning-button>
