--- a/force-app/main/default/lwc/flowCustomFooterButtons/flowCustomFooterButtons.html
+++ b/force-app/main/default/lwc/flowCustomFooterButtons/flowCustomFooterButtons.html
@@ -1,19 +1,11 @@
-<!-- <template>
-    <div>
-        <lightning-button variant="neutral" label="Previous" onclick={handlePrevious} class={previousButtonClass}></lightning-button>
-        <lightning-button variant="neutral" label="Next" onclick={handleNext} class={nextButtonClass}></lightning-button>
-        <lightning-button variant="brand" label="Save" onclick={handleSave} class={saveButtonClass}></lightning-button>
-    </div>
-</template> -->
-
-
 <template>
-    <div>
-        <lightning-button-group>
-            <lightning-button class="slds-p-top_small" variant="brand" label="Previous" onclick={handlePrevious} class={previousButtonClass} disabled={disablePrevious}></lightning-button>
-        <lightning-button class="slds-p-top_small" variant="brand" type="submit" label="Next" onclick={handleNext} class={nextButtonClass} disabled={disableNext}></lightning-button>
-        </lightning-button-group>
-        <lightning-button variant="brand" label="Finish" onclick={handleSave} class={saveButtonClass} disabled={disableSave}></lightning-button>
+    <div class="flexContainer">
+        <div class="flexElement">
+            <lightning-button variant="brand" label="Previous" onclick={handlePrevious} class={previousButtonClass}></lightning-button>
+        </div>
+        <div class="flexElement">
+            <lightning-button variant="brand" type="submit" label="Next" onclick={handleNext} class={nextButtonClass}></lightning-button>
+            <lightning-button variant="brand" label="Finish" onclick={handleSave} class={saveButtonClass}></lightning-button>
+        </div>
     </div>
-    
 </template>
